--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,12 @@
   <!-- Load p5.js and ml5.js -->
   <script src="./p5.min.js"></script>
   <script src="./ml5.min.js"></script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Didact+Gothic&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css" />
 
 </head>
@@ -20,11 +23,11 @@
 <body>
   <!-- Instruction Page -->
   <div id="instructions">
-    <div id = "title">Textile as Living Archive: 
-      memoirs of motion</div>
+    <div id = "title">Body as Textile</div>
     <div>
-      <div id = "subtext">create you dance textile.</div>
-      <div id = "instructions">prompt prompt prompt</div>
+      <div id = "subtext">Textile as Living Archive: 
+        Memoirs of Motion</div>
+      <div id = "prompt">prompt prompt prompt</div>
   </div>
     <button class="button" id="startButton">start</button>
   </div>
